tests/neg/i17613b.check
-- Error: tests/neg/i17613b/i17613b.scala:9:13 -------------------------------------------------------------------------
9 |		def foobar[ImTrait](in: D) = in.toString // error
  |		           ^^^^^^^
  |            Type parameter ImTrait for method foobar shadows the type defined by trait ImTrait in object importTry
-- Error: tests/neg/i17613b/i17613b.scala:10:13 ------------------------------------------------------------------------
10 |		type MySeq[ImTrait] = Seq[D] // error
   |		           ^^^^^^^
   |		           Type parameter ImTrait for type MySeq shadows the type defined by trait ImTrait in object importTry
-- Error: tests/neg/i17613b/i17613b.scala:12:14 ------------------------------------------------------------------------
12 |		def foobar2[ImClass](in: D) = in.toString // error
   |		            ^^^^^^^
   |         Type parameter ImClass for method foobar2 shadows the type defined by class ImClass in object importTry
-- Error: tests/neg/i17613b/i17613b.scala:13:14 ------------------------------------------------------------------------
13 |		type MySeq2[ImClass] = Seq[D] // error
   |		            ^^^^^^^
   |            Type parameter ImClass for type MySeq2 shadows the type defined by class ImClass in object importTry
-- Error: tests/neg/i17613b/i17613b.scala:16:24 ------------------------------------------------------------------------
16 |		type TypeLambda[A] = [ImTrait] =>> Map[ImTrait, B] // error
   |		                      ^^^^^^^
   |        Type parameter ImTrait for type TypeLambda shadows the type defined by trait ImTrait in object importTry
-- Error: tests/neg/i17613b/i17613b.scala:17:21 ------------------------------------------------------------------------
17 |		type PolyFun[A] = [ImTrait] => ImTrait => B // error
   |		                   ^^^^^^^
   |           Type parameter ImTrait for type PolyFun shadows the type defined by trait ImTrait in object importTry
-- Error: tests/neg/i17613b/i17613b.scala:23:12 ------------------------------------------------------------------------
23 |		class Foo[T](t: T): // error class parameter shadows some other type
   |		          ^
   |		          Type parameter T for class Foo shadows the type defined by type T in class B
-- Error: tests/neg/i17613b/i17613b.scala:27:15 ------------------------------------------------------------------------
27 |			def intType[List1](x: T) = x.toString() // error
   |			            ^^^^^
   |			            Type parameter List1 for method intType shadows an explicitly renamed type : List1
-- Error: tests/neg/i17613b/i17613b.scala:32:10 ------------------------------------------------------------------------
32 |			given [Int]: Ordering[Int]() // error
   |			       ^^^
   |         Type parameter Int for method given_Ordering_Int shadows the type defined by class Int in package scala
-- Error: tests/neg/i17613b/i17613b.scala:34:12 ------------------------------------------------------------------------
34 |		class C[M[List[_]]] // error List not renamed here
   |		          ^^^^^^^
   |		          Type parameter List for class C shadows the type defined by type List in package scala
-- Error: tests/neg/i17613b/i17613b.scala:35:11 ------------------------------------------------------------------------
35 |		type E[M[Int[_]]] = Int // error
   |		         ^^^^^^
   |		         Type parameter Int for type E shadows the type defined by class Int in package scala
-- Error: tests/neg/i17613b/i17613b.scala:37:14 ------------------------------------------------------------------------
37 |		def foo[N[M[List[_]]]] = // error
   |		            ^^^^^^^
   |		            Type parameter List for method foo shadows the type defined by type List in package scala
-- Error: tests/neg/i17613b/i17613b.scala:40:11 ------------------------------------------------------------------------
40 |				type Z[ImClassR] = Int // error
   |				       ^^^^^^^^
   |				       Type parameter ImClassR for type Z shadows an explicitly renamed type : ImClassR
-- Error: tests/neg/i17613b/i17613b.scala:41:18 ------------------------------------------------------------------------
41 |				class InnerCl[ImClassR] // error
   |				              ^^^^^^^^
   |				              Type parameter ImClassR for class InnerCl shadows an explicitly renamed type : ImClassR
